--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -8,8 +8,8 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 <link rel="manifest" href="/site.webmanifest" />
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#262a34" />
 <meta name="apple-mobile-web-app-title" content="MO" />
 <meta name="application-name" content="MO" />
-<meta name="msapplication-TileColor" content="#2b5797" />
-<meta name="theme-color" content="#ffffff" />
+<meta name="msapplication-TileColor" content="#262a34" />
+<meta name="theme-color" content="#262a34" />
